<?xml version="1.0"?>
<package>
  <name>tiago_2dnav_gazebo</name>
  <version>2.0.23</version>
  <description>TiaGo-specific launch files needed to run
    navigation on the TiaGo robot.</description>
  <maintainer email="jordi.pages@pal-robotics.com">Jordi Pages</maintainer>
  <license>Modified BSD</license>
  <author email="enrique.fernandez@pal-robotics.com">Enrique Fernandez</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>tiago_gazebo</run_depend>
  <run_depend>tiago_2dnav</run_depend>
</package>
