<?xml version="1.0"?>
<package>
  <name>tiago_gazebo</name>
  <version>2.3.3</version>
  <description>The tiago_gazebo package</description>
  <maintainer email="jordi.pages@pal-robotics.com">Jordi Pages</maintainer>
  <license>BSD</license>
  <author email="bence.magyar@pal-robotics.com">Bence Magyar</author>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>pal_gazebo_plugins</run_depend>
  <run_depend>pal_gazebo_worlds</run_depend>
  <run_depend>pal_hardware_gazebo</run_depend>
  <run_depend>tiago_bringup</run_depend>
  <run_depend>tiago_controller_configuration_gazebo</run_depend>
  <run_depend>tiago_description</run_depend>
  <run_depend>pal_gripper_controller_configuration_gazebo</run_depend>
  <run_depend>pal_pcl_points_throttle_and_filter</run_depend>

  <run_depend>rospy</run_depend>
  <run_depend>play_motion_msgs</run_depend>
</package>
