<?xml version="1.0"?>
<package format="3">
  <name>tiago_gazebo</name>
  <version>4.1.0</version>
  <description>The tiago_gazebo package</description>
  <maintainer email="jordan.palacios@pal-robotics.com">Jordan Palacios</maintainer>
  <maintainer email="noel.jimenez@pal-robotics.com">Noel Jimenez</maintainer>
  <maintainer email="jordi.pages@pal-robotics.com">Jordi Pages</maintainer>
  <license>Apache License 2.0</license>
  <author email="bence.magyar@pal-robotics.com">Bence Magyar</author>

  <url type="website">https://github.com/pal-robotics/tiago_simulation</url>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_pal</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>pal_gazebo_worlds</exec_depend>
  <exec_depend>pal_gazebo_plugins</exec_depend>
  <exec_depend>play_motion2_msgs</exec_depend>
  <exec_depend>tiago_bringup</exec_depend>
  <exec_depend>tiago_description</exec_depend>
  <exec_depend>tiago_moveit_config</exec_depend>
  <exec_depend>tiago_2dnav</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>play_motion2_msgs</test_depend>
  <test_depend>rclcpp</test_depend>
  <test_depend>sensor_msgs</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
