<?xml version="1.0"?>
<package>
  <name>tiago_multi</name>
  <version>2.3.4</version>
  <description>The tiago_multi package</description>

  <maintainer email="david.fernandez@pal-robotics.com">davidfernandez</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>tiago_gazebo</run_depend>
</package>
