<?xml version="1.0"?>
<package format="3">
  <name>tiago_simulation</name>
  <version>2.0.23</version>
  <description>The tiago_simulation package</description>
  <maintainer email="jordi.pages@pal-robotics.com">Jordi Pages</maintainer>
  <author email="bence.magyar@pal-robotics.com">Bence Magyar</author>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>tiago_gazebo</exec_depend>
  <!-- <exec_depend>pal_hardware_gazebo</exec_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
