<?xml version="1.0"?>
<package>
  <name>tiago_simulation</name>
  <version>2.3.15</version>
  <description>The tiago_simulation package</description>
  <maintainer email="jordi.pages@pal-robotics.com">Jordi Pages</maintainer>
  <author email="bence.magyar@pal-robotics.com">Bence Magyar</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>tiago_controller_configuration_gazebo</run_depend>
  <run_depend>tiago_gazebo</run_depend>
  <run_depend>pal_hardware_gazebo</run_depend>
  <run_depend>tiago_2dnav_gazebo</run_depend>
  <export>
    <metapackage/>
  </export>
</package>
