<?xml version="1.0"?>
<package format="3">
  <name>tiago_simulation</name>
  <version>4.1.0</version>
  <description>The tiago_simulation package</description>
  <maintainer email="jordan.palacios@pal-robotics.com">Jordan Palacios</maintainer>
  <maintainer email="noel.jimenez@pal-robotics.com">Noel Jimenez</maintainer>
  <maintainer email="jordi.pages@pal-robotics.com">Jordi Pages</maintainer>
  <author email="bence.magyar@pal-robotics.com">Bence Magyar</author>
  <license>Apache License 2.0</license>

  <url type="website">https://github.com/pal-robotics/tiago_simulation</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>tiago_gazebo</exec_depend>
  <!-- <exec_depend>pal_hardware_gazebo</exec_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
